<resources>
    <string name="app_name">CS639HW3</string>
    <string name="date">Date:</string>
    <string name="student_count">Student Count:</string>
    <string name="add_data">ADD DATA</string>
    <string name="clear_data">CLEAR DATA</string>
    <string name="show_lines">Show Lines:</string>
    <string name="highlight_integral">Highlight Integral:</string>
    <string name="filed_could_not_be_empty">Please fill both date and student count!</string>
    <string name="number_5">5</string>
    <string name="number_10">10</string>
    <string name="date_not_valid">Please enter a valid date!</string>
    <string name="new_date_format">%1$s/%2$s</string>
</resources>
